# PotentialTool

./: .gitignore  CMakeLists.txt
include/be/: element.hpp  patch.hpp  type_alias.hpp  vor_ring_patch.hpp  vortex_ring.hpp  vortex_segment.hpp
include/be/impl/: patch_impl.hpp  vor_ring_patch_impl.hpp
include/geometry/: curve.hpp  polyline.hpp  segment.hpp
include/mesh/: discretizer.hpp  domain.hpp  edge.hpp  face.hpp  grid.hpp  linear_discretizer.hpp  node.hpp
include/mesh/impl/: discretizer_impl.hpp  edge_impl.hpp  face_impl.hpp  grid_impl.hpp  linear_discretizer_impl.hpp
include/primitive/: point.hpp  types.hpp
src/: CMakeLists.txt
src/be/: CMakeLists.txt  patch.cpp  vortex_ring.cpp  vortex_segment.cpp
src/geometry/: CMakeLists.txt  polyline.cpp  segment.cpp
src/mesh/: CMakeLists.txt  domain.cpp  edge.cpp  face.cpp  grid.cpp  node.cpp
src/primitive/: CMakeLists.txt  point.cpp
test/: CMakeLists.txt  test_util.hpp
test/be/: CMakeLists.txt  patch.cpp  vor_ring_patch.cpp  vortex_segment_test.cpp
test/geometry/: CMakeLists.txt  polyline_test.cpp  segment_test.cpp
test/mesh/: CMakeLists.txt  domain.cpp  grid.cpp  linear_discretizer.cpp
